# mimi-backend

./: .env.example  .env.template  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: active_contexts
.claude/commands/: README.md  aud.md  fcs.md  impl.md  khub.md  klink.md  ksync.md  kupdate.md  pck.md  plan.md
.github/agents/: README.md  impl.agents.md  khub.agents.md  kupdate.agents.md  plan.agents.md  pr.agents.md
.github/instructions/: architect.instructions.md  database.instructions.md  impl.instructions.md  plan.instructions.md  response.instructions.md
docs/: API.md  ARCHITECTURE.md  DATABASE.md  ISSUE-TEMP.md  PRD.md  TASK-ISSUE-TEMP.md
src/: lib.rs
src/agents/: mod.rs  question_analyzer.rs  question_filter.rs  reading_agent.rs
src/api/: mod.rs  tarot.rs
src/auth/: api_key.rs  mod.rs
src/error/: mod.rs
src/models/: mod.rs
src/queue/: inmemory_queue.rs  mod.rs  redis_dedupe.rs  redis_queue.rs  types.rs  upstash_queue.rs
src/utils/: gemini.rs  mod.rs  prompt_manager.rs
src/worker/: mod.rs  retry.rs
tests/: error_handling_tests.rs  integration_test.rs  queue_inmemory_backend_tests.rs  queue_redis_backend_tests.rs  queue_redis_dedupe_tests.rs  queue_trait_tests.rs  queue_upstash_backend_tests.rs  setup.rs  worker_retry_tests.rs
